[project]
name = "augmentationsandbox"
version = "0.1.0"
description = "streamlit albumentations visualizer"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "streamlit-ace>=0.1.1",
    "albumentations>=1.3,<1.4",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "augmentations", "code_generator"]
